# llm_cost_profiler

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  explanation.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
dashboard/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: Attribution.tsx  DetailDrawer.tsx  EmptyState.tsx  FlameGraph.tsx  Sidebar.tsx  Timeline.tsx  Tooltip.tsx
dashboard/src/lib/: api.ts  colors.ts  format.ts  hooks.ts  types.ts
docs/: custom-pricing.md  integrations.md  quickstart.md  self-hosting.md
examples/: demo_langgraph_agent.py  demo_rag_app.py
src/tokenlens/: __init__.py  cli.py
src/tokenlens/core/: __init__.py  collector.py  context.py  span.py
src/tokenlens/cost/: __init__.py  attribution.py  pricing.py  pricing_data.json
src/tokenlens/instrument/: __init__.py  _common.py  anthropic_sdk.py  langchain.py  langgraph.py  openai_sdk.py
src/tokenlens/server/: __init__.py  app.py  live.py  models.py  routes.py
src/tokenlens/storage/: __init__.py  base.py  postgres.py  sqlite.py
tests/: conftest.py  factories.py  llm_mocks.py  storage_utils.py
tests/e2e/: test_cli.py  test_cli_api_consistency.py  test_smoke_server.py
tests/integration/: conftest.py  test_api_contract.py  test_live.py  test_pipeline.py  test_server_api.py
tests/unit/: test_collector.py  test_context.py  test_context_threads.py  test_cost_attribution.py  test_cost_pricing.py  test_edge_cases.py  test_import.py  test_instrument_anthropic.py  test_instrument_langchain.py  test_instrument_langgraph.py  test_instrument_openai.py  test_instrument_streams.py  test_langgraph_state.py  test_lazy_imports.py  test_properties.py  test_sample_trace_costs.py  test_span.py  test_storage_postgres.py  test_storage_sqlite.py
