[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenlens"
version = "0.1.0"
description = "A flamegraph for token spend — trace, attribute, and profile LLM pipeline costs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "tokenlens contributors" }]
keywords = ["llm", "observability", "profiler", "langchain", "langgraph", "cost", "tokens"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "pydantic>=2",
    "typing-extensions>=4.9",
    "aiosqlite>=0.20",
]

[project.urls]
Homepage = "https://github.com/tokenlens/tokenlens"
Repository = "https://github.com/tokenlens/tokenlens"

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
langgraph = ["langgraph>=0.1"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.34"]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
postgres = ["asyncpg>=0.29"]
cli = ["typer>=0.12", "rich>=13"]
all = ["tokenlens[langchain,langgraph,openai,anthropic,server,postgres,cli]"]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "httpx>=0.27",
]

[project.scripts]
tokenlens = "tokenlens.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenlens"]

# Ship the built dashboard inside the wheel so `tokenlens server` works out
# of the box from PyPI. Run `make dashboard` before building a release —
# without it the wheel builds but serves the "dashboard not built" page.
[tool.hatch.build.targets.wheel.force-include]
"dashboard/dist" = "tokenlens/_dashboard"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["tokenlens"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["langchain.*", "langgraph.*", "asyncpg.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: fast, isolated component tests (auto-applied to tests/unit/)",
    "integration: cross-component tests through real storage/API (auto-applied to tests/integration/)",
    "e2e: full-pipeline tests: real server subprocess, CLI (auto-applied to tests/e2e/)",
    "slow: takes more than a few seconds (e.g. the uvicorn smoke test)",
]

[tool.coverage.run]
source_pkgs = ["tokenlens"]

[tool.coverage.paths]
tokenlens = ["src/tokenlens"]

[tool.coverage.report]
show_missing = true
# The Postgres backend only runs against a live database (tests skip
# without TOKENLENS_PG_DSN), so it is excluded from the default gate.
omit = ["*/storage/postgres.py"]
